--- a/references.bib
+++ b/references.bib
@@ -535,6 +535,18 @@ url={https://books.google.com/books?id=ZXL6AQAAQBAJ}
   publisher={CRC Press}
 }
 
+@book{mcelreath2018statistical14,
+title={Statistical Rethinking: A Bayesian Course with Examples in R and Stan},
+author={McElreath, R.},
+isbn={9781315362618},
+lccn={2015032008},
+series={Chapman &amp; Hall/CRC Texts in Statistical Science},
+url={https://books.google.com/books?id=T3FQDwAAQBAJ},
+year={2018},
+publisher={CRC Press},
+chapter={14}
+}
+
 @Manual{shinylive,
   title = {shinylive: Run 'shiny' Applications in the Browser},
   author = {Barret Schloerke and Winston Chang and George Stagg and Garrick Aden-Buie},
@@ -575,4 +587,81 @@ url={https://books.google.com/books?id=ZXL6AQAAQBAJ}
   journal={Submitted to AmeriCorps by Mathematica. Chicago, IL, September},
   url = {https://www.mathematica.org/-/media/publications/pdfs/labor/2021/cncs_baseline-equivalencebrief.pdf},
   year={2018}
+}
+
+@misc{li2022principal,
+  author = {Fan Li},
+  title = {STA 640 — Causal Inference Unit 6.2: Post-treatment confounding: Principal Stratification},
+  year = {2022},
+  url = {https://www2.stat.duke.edu/~fl35/teaching/640/Chapter6.2_principal%20stratification.pdf}
+}
+
+@article{angrist1996identification,
+  title={Identification of causal effects using instrumental variables},
+  author={Angrist, Joshua D and Imbens, Guido W and Rubin, Donald B},
+  journal={Journal of the American statistical Association},
+  volume={91},
+  number={434},
+  pages={444--455},
+  year={1996},
+  publisher={Taylor \& Francis},
+  doi = {10.1080/01621459.1996.10476902}
+}
+
+@article{frangakis2002principal,
+  title={Principal stratification in causal inference},
+  author={Frangakis, Constantine E and Rubin, Donald B},
+  journal={Biometrics},
+  volume={58},
+  number={1},
+  pages={21--29},
+  year={2002},
+  publisher={Oxford University Press},
+  doi = {10.1111/j.0006-341X.2002.00021.x},
+  url = {https://doi.org/10.1111/j.0006-341X.2002.00021.x},
+  eprint = {https://academic.oup.com/biometrics/article-pdf/58/1/21/51699091/biometrics\_58\_1\_21.pdf}
+}
+
+@techreport{imbens2014instrumental,
+  title={Instrumental variables: An econometrician's perspective},
+  author={Imbens, Guido},
+  year={2014},
+  institution={National Bureau of Economic Research},
+  doi= {10.3386/w19983}
+}
+
+@article{imbens1997bayesian,
+ ISSN = {00905364},
+ URL = {http://www.jstor.org/stable/2242722},
+ author = {Guido W. Imbens and Donald B. Rubin},
+ journal = {The Annals of Statistics},
+ number = {1},
+ pages = {305--327},
+ publisher = {Institute of Mathematical Statistics},
+ title = {Bayesian Inference for Causal Effects in Randomized Experiments with Noncompliance},
+ urldate = {2024-08-06},
+ volume = {25},
+ year = {1997}
+}
+
+@article{liu2023pstrata,
+      title={PStrata: An R Package for Principal Stratification}, 
+      author={Bo Liu and Fan Li},
+      year={2023},
+      eprint={2304.02740},
+      archivePrefix={arXiv},
+      primaryClass={stat.CO},
+      url={https://arxiv.org/abs/2304.02740}
+}
+
+@article{vanderweele2011principal,
+  title={Principal stratification--uses and limitations},
+  author={VanderWeele, Tyler J},
+  journal={The international journal of biostatistics},
+  volume={7},
+  number={1},
+  pages={0000102202155746791329},
+  year={2011},
+  publisher={De Gruyter},
+  doi = {10.2202/1557-4679.1329}
 }
