--- a/iv.qmd
+++ b/iv.qmd
@@ -11,30 +11,36 @@ author:
   - name: Ignacio Martinez
 ---
 
-A common business question that arises is: "What is the value of a given set of
-users taking some action?" You cannot simply randomly assign users to take or
-not take the action—you can't force them to do anything! The most effective
-alternative in such scenarios is a Randomized Encouragement Design (RED). This
-study design employs an econometric approach called instrumental variables,
-where a subset of users is randomly encouraged to take the action. The history
-of instrumental variables is quite interesting. It was first introduced in
-the 1920s by economist Philip Wright in an unlikely place: an appendix to his
-book on the tariffs on animal and vegetable oils. While the book itself didn't
-cause much of a stir, the appendix contained a groundbreaking solution to the
-identification problem in economics. Notably, the instrumental variables
-approach was a key factor in the research that earned Joshua Angrist and Guido
-Imbens the 2021 Nobel Prize in Economics. Their work, which included the famous
-study on the causal effect of education on earnings using the draft lottery as
-an instrument, has had a profound impact on how economists and other social
-scientists approach causal questions.
+![Nudge](img/nudge.jpg){.lightbox}
+
+In the dynamic world of business, a recurring question is, "What if our users
+took a particular action? What would be the impact?" Yet, randomly assigning
+users to specific behaviors—forcing their hand, so to speak—isn't feasible. The
+most effective approach in such situations is a Randomized Encouragement Design
+(RED), a clever method rooted in the econometric concept of instrumental
+variables. In a RED, a subset of users is randomly nudged towards the action in
+question.
+
+The history of instrumental variables is itself a fascinating tale, originating
+in the 1920s with economist Philip Wright. Surprisingly, it first appeared in an
+appendix to his book on tariffs for animal and vegetable oils. While the book
+itself didn't make a big splash, the appendix held a groundbreaking solution to
+the identification problem in economics. This approach, instrumental variables,
+even played a pivotal role in the research that earned Joshua Angrist and Guido
+Imbens the 2021 Nobel Prize in Economics. Their renowned study on the causal
+effect of education on earnings, using the draft lottery as an instrument,
+revolutionized how economists and social scientists approach causal questions.
 
 ## Understanding REDs: Compliance and Potential Outcomes
 
-REDs rely on understanding how users respond to encouragement:
+REDs hinge on understanding how users respond to encouragement, categorizing
+them into four groups:
 
-  - **Compliers:** Change their behavior based on the encouragement.
-  - **Always-takers:** Would take the action regardless of encouragement.
-  - **Never-takers:** Wouldn't take the action regardless of encouragement.
+  - **Compliers:** Those who change their behavior based on encouragement.
+  - **Always-takers:** Those who would take the action regardless of
+    encouragement.
+  - **Never-takers:** Those who wouldn't take the action regardless of
+    encouragement.
   - **Defiers:** (Rarely assumed to exist) Do the opposite of what's encouraged.
 
 The potential outcomes framework is crucial for understanding these designs. For
@@ -48,11 +54,11 @@ each participant, we consider:
 ## What We Want to Know
 
 In the world of REDs, our curiosity often leads us down two paths. Sometimes,
-we're primarily interested in the value of the encouragement itself—the nudge,
-the prompt, the incentive. In this case, we estimate the Intent-to-Treat (ITT)
-effect: the average change in the outcome simply due to being encouraged,
-regardless of whether individuals actually comply and take the action.
-Mathematically, this is represented as:
+we're primarily interested in the value of the encouragement itself—the gentle
+push, the subtle prompt, the enticing incentive. In this case, we estimate the
+Intent-to-Treat (ITT) effect: the average change in the outcome simply due to
+being encouraged, regardless of whether individuals actually comply and take the
+action. Mathematically, this is represented as:
 
 $$ITT = E[Y(1) - Y(0)]$$
 
@@ -81,23 +87,26 @@ For REDs to yield valid causal conclusions, a few things need to hold true:
   - **Relevance:** The encouragement actually affects treatment take-up (i.e.,
     there are compliers).
     
-Which path we choose—ITT or CACE—depends entirely on the business decisions
-we're trying to inform. Are we evaluating the effectiveness of our marketing
-campaigns, where the encouragement itself is the key lever? Or are we trying to
-understand the inherent value of a product feature, where the actual usage is
-what matters most? REDs give us the flexibility to answer both questions,
-guiding our decisions with robust causal insights.  
+The choice between focusing on the ITT or the CACE depends entirely on the
+business decisions we're trying to inform. Are we evaluating the effectiveness
+of our marketing campaigns, where the encouragement itself is the key lever? Or
+are we trying to understand the inherent value of a product feature, where the
+actual usage is what matters most? REDs give us the flexibility to answer both
+questions, guiding our decisions with robust causal insights.
 
 ## Examples with synthetic data
+
+![BIVA](img/biva.png){.lightbox}
 
 The [{BIVA}](https://github.com/google/biva) R package is a Bayesian
 implementation of instrumental variable analysis. The package
 [vignette](https://github.com/google/biva/blob/main/vignettes/Gaussian.Rmd)
-contains a simulated example demonstrating its workflow and caveats.
-The simulated dataset is from a hypothetical RED under two-sided noncompliance.
-In other words, those encouraged to take the treatment can opt out,
-and those not encouraged can take the treatment, but there is no defier.
-Therefore, there exist compliers, never-takers, and always-takers in the study.
+contains a simulated example demonstrating its workflow and caveats. The
+simulated dataset is from a hypothetical RED under two-sided noncompliance. In
+other words, those encouraged to take the treatment can opt out, and those not
+encouraged can take the treatment, but there is no defier. Therefore, there
+exist compliers, never-takers, and always-takers in the study.
+
 
 ```{r simulated_data_two_side}
 set.seed(1997)
@@ -175,14 +184,14 @@ nudge and the effect of the treatment.
 
 #### Prior predictive checking
 
-The strength of a Bayesian inference workflow is that it will be able to
-encode prior business knowledge and assumptions by priors. Therefore,
-it is a good practice to kick off the analysis by visualizing the assumptions
-by the prior parameters fed into the function. Users can modify them
-before processing the data to best reflect their prior knowledge.
+The strength of a Bayesian approach lies in its ability to seamlessly integrate
+prior business knowledge and assumptions through the use of prior distributions.
+A prudent first step in any analysis is visualizing these assumptions through
+the prior parameters fed into the model. This allows users to refine them before
+delving into the data, ensuring the priors truly reflect their domain expertise.
 
 ```{r priors_check_two_side, fig.align = 'center', message=FALSE, results = "hide"}
-library(BIVA)
+library(biva)
 
 ivobj <- biva$new(
   data = df, y = "Y", d = "D", z = "Z",
@@ -202,14 +211,14 @@ ivobj <- biva$new(
 ivobj$plotPrior()
 ```
 
-In this case, the prior information assumes the impact of the treatment is
-centered around zero, and the distributions of the compliance types are
-quite balanced.
+In our example, the prior information assumes the impact of the treatment is
+centered around zero, with the distributions of compliance types being
+relatively balanced.
 
 #### Model fitting and diagnostics
 
-Having chosen prior parameters that best represent our prior knowledge, we
-proceed to actually fitting the model.
+After tailoring prior parameters to reflect our existing knowledge, we proceed
+with fitting the model.
 
 ```{r fit_two_side, fig.align = 'center', message=FALSE, results = "hide"}
 ivobj <- biva$new(
@@ -226,30 +235,32 @@ ivobj <- biva$new(
   sigma_scale_ymodel = rep(1, 4),
   fit = TRUE
 )
+```
 
-We inspect the traceplot of outcomes among different strata of compliant
-types to confirm if the mixing and convergence look good. The methods in
-the BIVA package allows us to take responsibility of understanding how we
-get the results and discerning any issues with the model fitting process
-before making conclusions.
+To ensure the model is behaving as expected, we inspect the trace plot of
+outcomes across different compliance strata, confirming satisfactory mixing and
+convergence. The BIVA package empowers us to take ownership of understanding the
+results, scrutinizing any potential issues in the fitting process before drawing
+conclusions.
 
 ```{r tracePlot_two_side, fig.align = 'center'}
 ivobj$tracePlot()
 ```
 
-The traceplot looks good. We perform a weak instrument test to make sure
-there is no need to worry about issues from a weak IV.
+With a healthy trace plot, we proceed with a weak instrument test, ensuring the
+validity of our results in the face of potential weak instruments.
 
 ```{r weak_IV_test_two_side, fig.align = 'center'}
 ivobj$weakIVTest()
 ```
 
-It passes the weak IV test.
+The test indicates no cause for concern regarding weak instruments.
 
 #### Posterior summary
 
-We summarize the findings from the analysis by calling methods tailored to
-the business questions of our interest.
+Now, we harness the power of Bayesian analysis to extract meaningful insights
+tailored to our business questions. The BIVA package provides a suite of methods
+to summarize the findings.
 
 ```{r findings_two_side, fig.align = 'center'}
 # Posterior distribution of the strata probability
@@ -266,13 +277,14 @@ ivobj$credibleInterval()
 ivobj$credibleInterval(width = 0.95)
 ```
 
-We obtain more accurate point estimates, informative statements,
-and flexible quantification of uncertainty that propel business decision-making.
+Through these methods, we obtain precise point estimates, informative
+probabilistic statements, and a flexible quantification of uncertainty that
+fuels informed decision-making.
 
 #### Visualizations of knowledge progression
 
-The comparison between the prior knowledge and the updated posterior by
-information from the data can be visualized by the following method.
+The evolution of our understanding, from prior knowledge to the updated
+posterior informed by data, can be vividly visualized.
 
 ::: {.content-visible when-format="html"}
 ```{r comparison_two_side, message=FALSE}
@@ -281,6 +293,28 @@ ivobj$vizdraws(
   display_mode_name = TRUE, breaks = 200,
   break_names = c("< 200", "> 200")
 )
-ivobj$lollipop(threshold = 200, mediumText = 8)
 ```
+:::
+
+This visual comparison elucidates how the data refines our initial beliefs,
+enhancing our grasp of the underlying causal relationships.
+
+::: {.callout-tip}
+## Further Exploration
+
+To delve deeper into the intricacies of instrumental variable analysis and
+causal inference, we recommend the following resources:
+
+  - @mcelreath2018statistical14 Statistical Rethinking: Instruments and causal
+    designs.
+  - @angrist1996identification Identification of causal effects using
+    instrumental variables.
+  - @frangakis2002principal Principal stratification in causal inference.
+  - @imbens2014instrumental Instrumental variables: An econometrician's
+    perspective.
+  - @imbens1997bayesian Bayesian inference for causal effects in randomized
+    experiments with noncompliance.
+  - @liu2023pstrata PStrata: An R Package for Principal Stratification.
+  - @vanderweele2011principal Principal stratification--uses and limitations.
+  - @li2022principal Post-treatment confounding: Principal Stratification.
 :::
