--- a/iv.qmd
+++ b/iv.qmd
@@ -397,6 +397,11 @@ our encouragement (the instrument) is sufficiently correlated with the actual
 use of the AI translation feature, allowing us to make reliable causal
 inferences.
 
+::: {.callout-note}
+## How does BIVA tests if you have a weak instrument?
+TODO
+:::
+
 #### Posterior Summary and Business Insights
 
 Now, we harness the power of Bayesian analysis to extract meaningful insights
@@ -440,6 +445,71 @@ ivobj$vizdraws(
 This visual comparison elucidates how the data refines our initial beliefs,
 enhancing our grasp of the underlying causal relationships.
 
+### Binary Outcomes (TODO)
+
+Many social media platforms offer monetization options for creators who reach a
+certain subscriber threshold. Let's consider a scenario where we're interested
+in whether adopting certain feature increases the likelihood of a creator
+reaching the monetization threshold within a 3-month period.
+
+We'll simulate data from a randomized encouragement design with noncompliance.
+Creators are randomly encouraged (or not) to use the AI content suggestion tool.
+Those encouraged can choose to use the tool or not. Those not encouraged may
+still discover and use the tool.
+
+```{r fake_data}
+set.seed(2024)
+n <- 500  # Number of creators in our study
+
+# Covariates: X (observed) is initial subscriber count, U (unobserved) is creator's inherent skill
+X <- rpois(n, lambda = 200)  # Initial subscribers, mean of 200
+U <- rbinom(n, 1, 0.3)  # Binary skill level (0: average, 1: highly skilled)
+
+## True memberships of principal strata (1:c,2:nt,3:at): S-model depends on U and X
+true.PS <- rep(0, n)
+prob_c <- plogis(-1 + 0.003*X + 1.5*U)  # Probability of being a complier
+prob_nt <- plogis(-0.5 - 0.002*X - U)   # Probability of being a never-taker
+prob_at <- 1 - prob_c - prob_nt         # Probability of being an always-taker
+
+for(i in 1:n) {
+  true.PS[i] <- sample(1:3, 1, prob = c(prob_c[i], prob_nt[i], prob_at[i]))
+}
+
+## Treatment assigned: half control & half treatment
+Z <- c(rep(0, n/2), rep(1, n/2))
+
+## Treatment received: determined by principal strata and treatment assigned
+D <- rep(0, n)
+c.trt.ind <- (true.PS == 1) & (Z == 1)
+c.ctrl.ind <- (true.PS == 1) & (Z == 0)
+nt.ind <- (true.PS == 2)
+at.ind <- (true.PS == 3)
+D[at.ind] <- 1
+D[c.trt.ind] <- 1
+
+## Generate observed outcome: Y-model depends on X, U, D, and principal strata
+Y <- rep(0, n)
+Y[c.ctrl.ind] <- rbinom(sum(c.ctrl.ind), 1, plogis(-2 + 0.005*X[c.ctrl.ind] + 1.5*U[c.ctrl.ind]))
+Y[c.trt.ind] <- rbinom(sum(c.trt.ind), 1, plogis(-1.5 + 0.005*X[c.trt.ind] + 1.5*U[c.trt.ind]))
+Y[nt.ind] <- rbinom(sum(nt.ind), 1, plogis(-2.2 + 0.005*X[nt.ind] + 1.5*U[nt.ind]))
+Y[at.ind] <- rbinom(sum(at.ind), 1, plogis(-1.8 + 0.005*X[at.ind] + 1.5*U[at.ind]))
+
+df <- data.frame(Y = Y, Z = Z, D = D, X = X, U = U)
+```
+
+
+In this simulation the strata model depends on both the observed initial subscriber count (X) and the unobserved creator skill (U). The outcome models vary by strata and treatment status. The Complier Average Causal Effect (CACE) is set to be positive, representing an increased probability of reaching the monetization threshold when using the tool.
+
+#### Naive Logistic Regression Analysis
+
+Let's first look at what a naive logistic regression would tell us:
+
+```{r logit}
+logit_model <- glm(Y ~ D + X, data = df, family = binomial)
+broom::tidy(logit_model)
+```
+
+ 
 ::: {.callout-tip}
 ## Further Exploration
 
